the currency auto-convert of .com site is done.
it will show RMB after dollar prices on search result page.

--- a/popup.html
+++ b/popup.html
@@ -20,8 +20,11 @@
 		<div id="clock_div">
 		
 		</div>	
-		<script src="js/my_clock.js">
-
-		</script>
+		<script src="js/my_clock.js"></script>
+		<ul style="width: 400px; margin: -1px;">
+			<li>
+				<button style="line-height:1">disable</button>	
+			</li>
+		</ul>
 	</body>	
 </html>
