now the link from search page can open in new tab.
I put the <base target="_blank"> to changePageBkgdColor.js now. the file
name should be changed later.

--- a/popup.html
+++ b/popup.html
@@ -11,20 +11,22 @@
 			}
 			div {
 				line-height: 100px;
-				font-size: 42px;
+				font-size: 22px;
 				text-align: center;
 			}
 		</style>
 	</head>
 	<body>
 		<div id="clock_div">
-		
 		</div>	
+		<hr/>
 		<script src="js/my_clock.js"></script>
-		<ul style="width: 400px; margin: -1px;">
-			<li>
-				<button style="line-height:1">disable</button>	
-			</li>
-		</ul>
+		<div>
+			<ul>
+				<li>
+					<button style="line-height:1">disable</button>	
+				</li>
+			</ul>
+		</div>	
 	</body>	
 </html>
